force-app/main/default/objects/Record_Deleter_Setting__mdt/Record_Deleter_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Record Deleter Setting</label>
    <pluralLabel>Record Deleter Settings</pluralLabel>
</CustomObject>