force-app/main/default/objects/Record_Deleter_Setting__mdt/fields/Child_Field_Key__c.field-meta.xml
<CustomField>
    <fullName>Child_Field_Key__c</fullName>
    <description>Which field on the child object do we need to use to find which of these records to delete (e.g. `$.Contact__c`).</description>
    <inlineHelpText>Which field on the child object do we need to use to find which of these records to delete (e.g. `$.Contact__c`).</inlineHelpText>
    <label>Child Field Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>