force-app/main/default/objects/Record_Deleter_Setting__mdt/fields/Child_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_Type__c</fullName>
    <description>These records will need to be deleted in order to finish deleting the parent object.</description>
    <inlineHelpText>These records will need to be deleted in order to finish deleting the parent object.</inlineHelpText>
    <label>Child Object Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>