force-app/main/default/objects/Record_Deleter_Setting__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>The order to perform child deletion in, goes in increasing order.</description>
    <inlineHelpText>The order to perform child deletion in, goes in increasing order.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>