force-app/main/default/objects/Record_Deleter_Setting__mdt/fields/Parent_Field_Key__c.field-meta.xml
<CustomField>
    <fullName>Parent_Field_Key__c</fullName>
    <description>Key for which field on the parent object, the child object's field's value must match (e.g. `$.Id` (which would be the parent object's record id)).</description>
    <inlineHelpText>Key for which field on the parent object, the child object's field's value must match (e.g. `$.Id` (which would be the parent object's record id)).</inlineHelpText>
    <label>Parent Field Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>