force-app/main/default/objects/Record_Deleter_Setting__mdt/fields/Parent_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Type__c</fullName>
    <description>The object type this config is for. When an object of this type is mass deleted, this setting will be used to determine which records to delete.</description>
    <inlineHelpText>The object type this config is for. When an object of this type is mass deleted, this setting will be used to determine which records to delete.</inlineHelpText>
    <label>Parent Object Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>